# JarvisOS

./: .gitignore  README.md
JarvisOSFromScratch/: CMakeLists.txt
JarvisOSFromScratch/output-MinGW-i386/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
JarvisOSFromScratch/output-MinGW-i386/hosttools/tools/: cmake_install.cmake
JarvisOSFromScratch/output-MinGW-i386/source/ntoskrnl/: cmake_install.cmake
JarvisOSViaReactOS/: .gitignore  CMakeLists.txt  Doxyfile
JarvisOSViaReactOS/boot/: CMakeLists.txt
JarvisOSViaReactOS/boot/armllb/: boot.s
JarvisOSViaReactOS/boot/bootdata/: CMakeLists.txt  autorun-bootcd.inf  autorun-hybridcd.inf  bootcd.ini  hivebcd.inf  txtsetup.sif
JarvisOSViaReactOS/boot/environ/: CMakeLists.txt
JarvisOSViaReactOS/boot/freeldr/bootsect/: CMakeLists.txt
JarvisOSViaReactOS/boot/freeldr/fdebug/: fdebug.rc
JarvisOSViaReactOS/boot/freeldr/freeldr/: CMakeLists.txt  custom.c
JarvisOSViaReactOS/config/: CMakeMacros.cmake  gcc.cmake  host-tools.cmake  msvc.cmake  widl-support.cmake
JarvisOSViaReactOS/sdk/include/crt/: comutil.h  crtdefs.h
JarvisOSViaReactOS/sdk/tools/xml2sdb/: CMakeLists.txt
JarvisOSViaReactOS/src/base/applications/atactl/: CMakeLists.txt  atactl.rc
JarvisOSViaReactOS/src/base/services/eventlog/: CMakeLists.txt  eventlog.rc
JarvisOSViaReactOS/src/base/services/rpcss/: CMakeLists.txt  rpcss.rc  rpcss_main.c
JarvisOSViaReactOS/src/base/services/wkssvc/: CMakeLists.txt  wkssvc.rc
JarvisOSViaReactOS/src/base/setup/jarvisos/: CMakeLists.txt  jarvisos.exe.manifest  reactos.h  reactos.rc  treelist.c  treelist.h
JarvisOSViaReactOS/src/base/setup/jarvisos/lang/: bg-BG.rc  cs-CZ.rc  de-DE.rc  el-GR.rc  en-US.rc  es-ES.rc  et-EE.rc  fi-FI.rc  fr-FR.rc  he-IL.rc  hu-HU.rc  it-IT.rc  ja-JP.rc  ms-MY.rc  no-NO.rc  pt-BR.rc  pt-PT.rc  ru-RU.rc  sk-SK.rc  sq-AL.rc  tr-TR.rc  uk-UA.rc  vi-VN.rc  zh-CN.rc  zh-TW.rc
JarvisOSViaReactOS/src/base/setup/jarvisos/spapisup/: infsupp.c
JarvisOSViaReactOS/src/base/setup/usetup/: CMakeLists.txt  muilanguages.h  usetup.c  usetup.h  usetup.rc
JarvisOSViaReactOS/src/base/setup/usetup/lang/: bg-BG.h  bn-BD.h  cs-CZ.h  da-DK.h  de-DE.h  el-GR.h  en-US.h  et-EE.h  fr-FR.h  he-IL.h  it-IT.h  lt-LT.h  ms-MY.h  nl-NL.h  pt-BR.h  pt-PT.h  ro-RO.h  ru-RU.h  sk-SK.h  sq-AL.h  sv-SE.h  tr-TR.h  uk-UA.h
JarvisOSViaReactOS/src/base/setup/usetup/spapisup/: inffile.h
JarvisOSViaReactOS/src/dll/np/nfs/: CMakeLists.txt  nfs41_np.c  nfsnp.rc  options.c
JarvisOSViaReactOS/src/dll/win32/comcat/: CMakeLists.txt
JarvisOSViaReactOS/src/dll/win32/compstui/: CMakeLists.txt
JarvisOSViaReactOS/src/dll/win32/cryptdll/: CMakeLists.txt  stubs.c
JarvisOSViaReactOS/src/dll/win32/httpapi/: CMakeLists.txt  httpapi_main.c
JarvisOSViaReactOS/src/dll/win32/iccvid/: CMakeLists.txt
JarvisOSViaReactOS/src/dll/win32/mciwave/: CMakeLists.txt
JarvisOSViaReactOS/src/dll/win32/mgmtapi/: CMakeLists.txt
JarvisOSViaReactOS/src/dll/win32/msg711.acm/: CMakeLists.txt
JarvisOSViaReactOS/src/dll/win32/msisip/: CMakeLists.txt
JarvisOSViaReactOS/src/dll/win32/netapi32/: CMakeLists.txt
JarvisOSViaReactOS/src/dll/win32/npptools/: CMakeLists.txt
JarvisOSViaReactOS/src/dll/win32/printui/: CMakeLists.txt
JarvisOSViaReactOS/src/dll/win32/schannel/: CMakeLists.txt  schannel_main.c  schannel_mbedtls.c  secur32_wine.c
JarvisOSViaReactOS/src/dll/win32/sensapi/: CMakeLists.txt
JarvisOSViaReactOS/src/dll/win32/windowscodecsext/: CMakeLists.txt
JarvisOSViaReactOS/src/dll/win32/winemp3.acm/: CMakeLists.txt
JarvisOSViaReactOS/src/drivers/base/condrv/: CMakeLists.txt  condrv.rc
JarvisOSViaReactOS/src/drivers/hid/kbdhid/: CMakeLists.txt  kbdhid.rc
JarvisOSViaReactOS/src/drivers/hid/mouhid/: CMakeLists.txt  mouhid.rc
JarvisOSViaReactOS/src/hal/halarm/: CMakeLists.txt
JarvisOSViaReactOS/src/hal/halarm/generic/: cache.S
JarvisOSViaReactOS/src/media/: CMakeLists.txt
JarvisOSViaReactOS/src/media/fonts/: CMakeLists.txt
JarvisOSViaReactOS/src/media/inf/: CMakeLists.txt
JarvisOSViaReactOS/src/media/nls/: CMakeLists.txt
JarvisOSViaReactOS/src/media/sdb/: CMakeLists.txt
JarvisOSViaReactOS/src/media/themes/Blackshade/blackshade.msstyles/: blackshade.rc
JarvisOSViaReactOS/src/media/themes/Lautus/lautus.msstyles/: CMakeLists.txt  lautus.rc
JarvisOSViaReactOS/src/media/themes/Lunar/lunar.msstyles/: CMakeLists.txt  lunar.rc
JarvisOSViaReactOS/src/media/themes/Mizu/mizu.msstyles/: CMakeLists.txt  mizu.rc
JarvisOSViaReactOS/src/media/themes/Modern/modern.msstyles/: CMakeLists.txt  modern.rc
JarvisOSViaReactOS/src/media/vgafonts/: CMakeLists.txt
JarvisOSViaReactOS/src/modules/: CMakeLists.txt
JarvisOSViaReactOS/src/modules/wallpapers/: CMakeLists.txt
JarvisOSViaReactOS/src/modules/wallpapers/Angelus/Bliss/: CMakeLists.txt
JarvisOSViaReactOS/src/modules/wallpapers/Angelus/BlueHorizon/: CMakeLists.txt
JarvisOSViaReactOS/src/modules/wallpapers/Angelus/DeepSea/: CMakeLists.txt
JarvisOSViaReactOS/src/modules/wallpapers/Angelus/Fisherman/: CMakeLists.txt
JarvisOSViaReactOS/src/modules/wallpapers/Angelus/Flower/: CMakeLists.txt
JarvisOSViaReactOS/src/modules/wallpapers/Angelus/Rain/: CMakeLists.txt
JarvisOSViaReactOS/src/modules/wallpapers/Angelus/ReactOS/: CMakeLists.txt
JarvisOSViaReactOS/src/modules/wallpapers/Angelus/ReactOSNewHope/: CMakeLists.txt
JarvisOSViaReactOS/src/modules/wallpapers/Angelus/ReactOSSea/: CMakeLists.txt
JarvisOSViaReactOS/src/modules/wallpapers/Angelus/ReactOSSunset/: CMakeLists.txt
JarvisOSViaReactOS/src/modules/wallpapers/Angelus/Sea/: CMakeLists.txt
JarvisOSViaReactOS/src/modules/wallpapers/Angelus/Sky/: CMakeLists.txt
JarvisOSViaReactOS/src/modules/wallpapers/Angelus/VistaReactOS/: CMakeLists.txt
JarvisOSViaReactOS/src/modules/wallpapers/Silhouette/: CMakeLists.txt
JarvisOSViaReactOS/src/ntoskrnl/: CMakeLists.txt  ntos.cmake
JarvisOSViaReactOS/src/win32ss/: CMakeLists.txt  win32k.h  win32k.rc
Research/CDRTools/output-MinGW-i386/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
(+2067 files in other folders)
