add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/1920px_Polarlicht.jpg DESTINATION jarvisos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/clouds.jpg DESTINATION jarvisos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/grass.jpg DESTINATION jarvisos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/lake.jpg DESTINATION jarvisos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/ReactOS_CirclesBlue_1.jpg DESTINATION jarvisos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/ReactOS_CirclesBlue_2.jpg DESTINATION jarvisos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/ReactOS_CirclesGold_1.jpg DESTINATION jarvisos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/ReactOS_CirclesGold_2.jpg DESTINATION jarvisos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/ReactOS_Hexagons.jpg DESTINATION jarvisos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/ReactOS_Soft_Blue.png DESTINATION jarvisos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/ReactOS_Soft_Blue_4x3.png DESTINATION jarvisos/Web/Wallpaper FOR all)
add_cd_file(FILE ${CMAKE_CURRENT_SOURCE_DIR}/ReactOS_Soft_Blue_16x9.png DESTINATION jarvisos/Web/Wallpaper FOR all)
add_subdirectory(Angelus)
add_subdirectory(Silhouette)
